<resources>
    <string name="app_name">Ducky Route</string>
    <string name="logo_ducky_route">logo_ducky_route</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="olvid_su_contrase_a">¿Olvidó su contraseña?</string>
    <string name="ups_algo_sali_mal">Ups, algo salió mal</string>
    <string name="cierra_la_aplicaci_n_y_vuelve_a_intentarlo">Cierra la aplicación y vuelve a intentarlo</string>
    <string name="img_error">img_error</string>
    <string name="cerrar">Cerrar</string>
    <string name="screen_scroll">screen_scroll</string>
    <string name="verifica_tu_c_digo">Verifica tu código</string>
    <string name="acabamos_de_enviar_un_c_digo_a">Acabamos de enviar un código a</string>
    <string name="email_email_com">email@email.com</string>
    <string name="_0">0</string>
    <string name="aceptar">Aceptar</string>
    <string name="boton_navegar">Boton navegar</string>
    <string name="emergencia">Emergencia</string>
    <string name="veh_culo">Vehículo</string>
    <string name="inicio">Inicio</string>
    <string name="mi_informaci_n">Mi información</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="seguridad">Seguridad</string>
    <string name="recupera_tu_cuenta">Recupera tu cuenta</string>
    <string name="cancelar">Cancelar</string>
    <string name="introduce_tu_correo_electr_nico_para_buscar_tu_cuenta">Introduce tu correo electrónico para buscar tu cuenta</string>
    <string name="button_hidepassword">button_hidepassword</string>
    <string name="confirmar_la_contrase_a">Confirmar la contraseña</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="nnueva_contrase_a">nueva contraseña</string>
    <string name="ingrese_su">Ingrese su</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="si_desea_cambiar_su_contrase_a_complete_los_campos_correctamente_y_confirme">Si desea cambiar su contraseña complete los campos correctamente y confirme.</string>
    <string name="confirmar">Confirmar</string>
    <string name="contrase_a_anterior">Contraseña anterior</string>
    <string name="hidepass1">hidepass1</string>
    <string name="nombre">Nombre</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="dni">DNI</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="direcci_n">Dirección</string>
    <string name="tel_fono">Teléfono</string>
    <string name="editar">Editar</string>
    <string name="n_de_licencia">N° de licencia</string>
    <string name="n_mero_de_licencia">Número de licencia</string>
    <string name="tipo_de_licencia">Tipo de licencia</string>
    <string name="fecha_de_emisi_n">Fecha de emisión</string>
    <string name="fecha_de_expiraci_n">Fecha de expiración</string>
    <string name="contrase_adelusuario">Contraseñadelusuario</string>
    <string name="guardar">Guardar</string>
    <string name="quiere_actualizar_su_n_mero_telef_nico">¿Quiere actualizar su número telefónico?</string>
    <string name="escriba_aqu">Escriba aquí</string>
    <string name="centro_de_ayuda">Centro de ayuda</string>
    <string name="img_send">img_send</string>
    <string name="en_caso_de_alguna_emergencia_presione_el_bot_n_de_llamar_para_ponerse_en_contacto_con_la_central_de_asistencia_al_conductor">En caso de alguna emergencia presione el botón de llamar para ponerse en contacto con la central de asistencia al conductor.</string>
    <string name="llamar">Llamar</string>
    <string name="veh_culo_asignado">Vehículo Asignado</string>
    <string name="n_de_placa">N° de placa</string>
    <string name="placa">Placa</string>
    <string name="descripci_n">Descripción</string>
    <string name="sin_descripci_n">Sin descripción</string>
    <string name="p">P</string>
    <string name="se_rechaz_el_permiso_a_la_app">Se rechazó el permiso a la app.</string>
    <string name="configuraci_n">Configuración</string>
</resources>