<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:paddingTop="50dp"
        android:paddingBottom="30dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview_letra_drawer"
            android:textColor="@color/black"
            android:backgroundTint="@color/colorDuckyLow"
            android:gravity="center"
            android:text="@string/p"
            android:textSize="35sp"
            android:background="@drawable/border_radius"
            android:layout_width="70dp"
            android:layout_height="70dp"/>

        <LinearLayout
            android:layout_marginStart="15dp"
            android:gravity="start|center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textview_nombres_drawer"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/nombres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textview_apellidos_drawer"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/apellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>